:tada: add all projects to slider

--- a/public/challenges/interactive-pricing-component/src/index.css
+++ b/public/challenges/interactive-pricing-component/src/index.css
@@ -16,8 +16,8 @@
 		--slider-thumb-margin-top-big: -35px;
 		--slider-thumb-brightness: brightness(90%);
 		--slider-thumb-transition: all 0.08s ease;
-		--slider-thumb-background: theme('colors.strongCyan') url('/assets/images/icon-slider.svg') center no-repeat;
-		--slider-thumb-background-big: theme('colors.strongCyan') url('/assets/images/icon-slider.svg') center/55% no-repeat;
+		--slider-thumb-background: theme('colors.strongCyan') url(./images/icon-slider.svg) center no-repeat;
+		--slider-thumb-background-big: theme('colors.strongCyan') url(./images/icon-slider.svg) center/55% no-repeat;
 		--slider-thumb-box-shadow: 0 15px 40px 0 theme('colors.strongCyan');
 	}
 }
