--- a/public/challenges/multi-step-form-rhf/src/index.scss
+++ b/public/challenges/multi-step-form-rhf/src/index.scss
@@ -16,19 +16,19 @@ $mobile: 768px;
 
 @font-face {
 	font-family: 'Ubuntu';
-	src: url('/fonts/ubuntu-regular.woff2') format('woff2');
+	src: url(./fonts/ubuntu-regular.woff2) format('woff2');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'Ubuntu';
-	src: url('/fonts/ubuntu-medium.woff2') format('woff2');
+	src: url(./fonts/ubuntu-medium.woff2) format('woff2');
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: 'Ubuntu';
-	src: url('/fonts/ubuntu-bold.woff2') format('woff2');
+	src: url(./fonts/ubuntu-bold.woff2) format('woff2');
 	font-weight: 700;
 }
 
