--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 @layer components {
-  .button {
-    @apply px-4 py-2 bg-blue-500 text-white rounded-md;
-  }
+	.button {
+		@apply px-3 py-2 bg-blue-500/70 hover:bg-blue-500 text-white rounded-md transition-colors;
+	}
 }
