--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Mooli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-	.button {
+	.navigation-button {
 		@apply px-3 py-2 w-12 h-12 bg-blue-500/70 hover:bg-blue-500 text-white rounded-md transition-colors;
+	}
+
+	.toggle-button {
+		@apply grid h-8 w-8 place-items-center rounded-full border-2 border-gray-800 transition-all hover:border-gray-600 hover:bg-gray-100 dark:border-white dark:text-white hover:dark:bg-slate-600;
 	}
 }
