--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
 
 @layer components {
 	.navigation-button {
-		@apply px-3 py-2 w-12 h-12 bg-blue-500/70 hover:bg-blue-500 text-white rounded-md transition-colors;
+		@apply px-3 py-2 w-12 h-12 dark:bg-purple-600/70 dark:hover:bg-purple-600 bg-blue-500/70 hover:bg-blue-500 text-white rounded-md transition-colors;
 	}
 
 	.toggle-button {
-		@apply grid h-8 w-8 place-items-center rounded-full border-2 border-gray-800 transition-all hover:border-gray-600 hover:bg-gray-100 dark:border-white dark:text-white hover:dark:bg-slate-600;
+		@apply grid h-8 w-8 place-items-center rounded-full cursor-pointer border-2 border-gray-800 transition-all hover:border-gray-600 hover:bg-gray-100 dark:border-white dark:text-white hover:dark:bg-slate-600;
 	}
 }
